--- a/main/templates/main/dasbbackup.html
+++ b/main/templates/main/dasbbackup.html
@@ -232,6 +232,104 @@
        
     </div>
     <!-- end row-->
+<div class="row text-center">
+    <div class="col-12" style="position: relative;">
+        
+        <!-- Include the SVG image here -->
+        <svg version="1.1" id="Ebene_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+        width="100%" height="751.181px" viewBox="0 0 637.795 751.181" style="enable-background:new 0 0 637.795 751.181;"
+        xml:space="preserve" style="position: relative; z-index:  !important;">
+   <style type="text/css">
+        #kitui {
+            fill-rule: evenodd;
+            clip-rule: evenodd;
+            {% for county in counties %}
+                {% if county.id == 1 %}
+                    {% if county.status > 1 %}
+                        fill: red;
+                        
+                    {% endif %}
+                {% endif %}
+            {% endfor %}
+        }
+       #laikipia{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;;}
+       #machakos{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;;}
+       #makueni{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #mandera{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #marsabit{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #meru{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #migori{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #mombasa{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #transzoia{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #narok{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #nyamira{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #taitataveta{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #siaya{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #samburu{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #turkana{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #nandi{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #tharakanithi{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #uasingishu{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #vihiga{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #wajir{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #westpokot{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #nakuru{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #kisumu{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #kisii{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #baringo{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #bomet{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #bungoma{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #busia{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #elgeyomarkwet{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #embu{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #garissa{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #homabay{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #isiolo{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #kajiado{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #kakamega{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #kericho{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #kilifi{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #lamu{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #muranga{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #kiambu{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #kirinyaga{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #nyeri{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #nairobi{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #nyandarua{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #tanariver{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       #kwale{fill-rule:evenodd;clip-rule:evenodd;fill:#FFFF00;}
+       
+       
+
+
+
+
+       
+       .st1{fill:none;stroke:#232323;stroke-width:0.5;stroke-linecap:square;stroke-linejoin:bevel;stroke-miterlimit:10;}
+       .st2{fill-rule:evenodd;clip-rule:evenodd;}
+       .st3{fill:none;stroke:#000;stroke-width:0.5;stroke-linecap:square;stroke-linejoin:bevel;stroke-miterlimit:10;}
+       .st4{fill-rule:evenodd;clip-rule:evenodd;fill:#00FF01;}
+       .st5{fill-rule:evenodd;clip-rule:evenodd;fill:#008001;}
+       .st6{fill-rule:evenodd;clip-rule:evenodd;fill:#01FFFC;}
+       .st7{fill-rule:evenodd;clip-rule:evenodd;fill:#0E8DFF;}
+       .st8{fill-rule:evenodd;clip-rule:evenodd;fill:#FF0007;}
+       .st9{fill-rule:evenodd;clip-rule:evenodd;fill:#0006CA;}
+       .st10{fill:none;stroke:#000000;stroke-miterlimit:10;}
+       .st11{font-family:Liberation Sans,Arial,Sans-serif;}
+       .st12{font-size:16px;}
+       .st13{fill:#000;}
+   </style>
+
+   {% include '../main/includes/svg.html' %}
+   </svg>
+   
+
+        <!-- Embed the map inside an iframe and position it behind the SVG using absolute positioning -->
+        <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8171114.066776021!2d32.606563725676295!3d0.16492886256538883!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182780d08350900f%3A0x403b0eb0a1976dd9!2sKenya!5e0!3m2!1sen!2ske!4v1694692733303!5m2!1sen!2ske" 
+            style="border: 0; width: 100%; height: 100%; position: absolute; top: 0; left: 0; z-index: 0;"
+            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+    </div>
+</div>
 
     
 
