--- a/main/templates/main/includes/dashboard.html
+++ b/main/templates/main/includes/dashboard.html
@@ -17,6 +17,47 @@
         <div class="d-flex align-items-center">
 
           
+            <div class="dropdown d-inline-block">
+                <button type="button" class="btn header-item waves-effect waves-light dropdown-toggle" id="page-header-user-dropdown"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-flag"></i>
+                    <span class="d-none d-sm-inline-block ml-1">County</span>
+                    <i class="mdi mdi-chevron-down d-none d-sm-inline-block"></i>
+                </button>
+                <div class="dropdown-menu dropdown-menu-right">
+                    {% for county in county_pcns %}
+                    <a href="{% url 'main:county' county.id %}" class="dropdown-item notify-item">
+
+                        <i class="fas fa-flag"></i>
+                           <span class="align-middle">{{ county.name }}</span>
+                    </a>
+                    {% endfor %}
+            
+                    <!-- Pagination links -->
+                  <div class="card-footer">
+                    <div class="pagination pagination-sm">
+                        <span class="page-item">
+                            {% if county_pcns.has_previous %}
+                                <a href="?pcns_per_county_page=1" class="page-link waves-effect" aria-label="First">
+                                    <span aria-hidden="true">&laquo;</span> 1
+                                </a>
+                                <a href="?pcns_per_county_page={{ county_pcns.previous_page_number }}" class="page-link waves-effect" aria-label="Previous">previous</a>
+                            {% endif %}
+                    
+                            <span class="page-item active">{{ county_pcns.number }}</span>
+                    
+                            {% if county_pcns.has_next %}
+                                <a href="?pcns_per_county_page={{ county_pcns.next_page_number }}" class="page-link waves-effect" aria-label="Next">next</a>
+                                <a href="?pcns_per_county_page={{ county_pcns.paginator.num_pages }}" class="page-link waves-effect" aria-label="Last">last &raquo;</a>
+                            {% endif %}
+                        </span>
+                    </div>
+                  </div>
+                    
+                </div>
+            </div>
+            
+            
             <button type="button" class="btn btn-sm mr-2 font-size-16 d-lg-none header-item waves-effect waves-light" data-toggle="collapse" data-target="#topnav-menu-content">
                 <i class="fa fa-fw fa-bars"></i>
             </button>
@@ -25,21 +66,34 @@
     </div>
 </header>
 
-
 <div class="topnav">
     <div class="container-fluid">
         <nav class="navbar navbar-light navbar-expand-lg topnav-menu">
             
-            <div class="collapse navbar-collapse" id="topnav-menu-content">
+            <div class="collapse navbar-collapse justify-content-center" id="topnav-menu-content">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'main:dashboard' %}">
-                            <i class="mdi mdi-view-dashboard mr-2"></i>Dashboard
+                            Overview
                         </a>
                     </li>
-
+                    <li class="nav-item">
+                        <a class="nav-link" href="">
+                            Graphs
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="">
+                            Tables
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'main:map' %}">
+                            Map
+                        </a>
+                    </li>
                 </ul>
             </div>
         </nav>
     </div>
-</div>   
+</div>
