--- a/main/templates/main/county_map.html
+++ b/main/templates/main/county_map.html
@@ -808,7 +808,7 @@
      <div class="col-4">
         <div class="card">
             <div class="card-body">
-                <i class="fas fa-globe"></i>     Kenya
+                <i class="fas fa-globe"></i> {{county.name}}
 
                 <div class="table-responsive">
                     <table class="table table-bordered mb-0">
@@ -820,19 +820,19 @@
                             </tr>
                             <tr>
                                 <td>Not Started</td>
-                                <td>{{not_started_percentage}} %</td>
+                                <td>{{percentage_not_started}} %</td>
                             </tr>
                             <tr>
                                 <td>In progress</td>
-                                <td>{{in_progress_percentage}} %</td>
+                                <td>{{percentage_in_progress}} %</td>
                             </tr>
                             <tr>
                                 <td>Fully Established</td>
-                                <td>{{fully_established_percentage}} %</td>
+                                <td>{{percentage_fully_established}} %</td>
                             </tr>
                             <tr>
                                 <td>Partner Support </td>
-                                <td>{{subcounties_with_partners_percentage}} %</td>
+                                <td>{{percentage_partner_support}} %</td>
                             </tr>
                         </tbody>
                     </table>
