--- a/main/templates/main/includes/dashboard.html
+++ b/main/templates/main/includes/dashboard.html
@@ -16,6 +16,7 @@
 
         <div class="d-flex align-items-center">
 
+
           
             <div class="dropdown d-inline-block">
                 <button type="button" class="btn header-item waves-effect waves-light dropdown-toggle" id="page-header-user-dropdown"
@@ -56,6 +57,28 @@
                     
                 </div>
             </div>
+
+            {% if user.is_authenticated %}
+            <div class="dropdown d-inline-block ml-2">
+                <button type="button" class="btn header-item waves-effect waves-light" id="page-header-user-dropdown"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-user"></i>
+                    <span class="d-none d-sm-inline-block ml-1">{{user.username}}</span>
+                    <i class="mdi mdi-chevron-down d-none d-sm-inline-block"></i>
+                </button>
+                <div class="dropdown-menu dropdown-menu-right">
+                    <a class="dropdown-item d-flex align-items-center justify-content-between" href="{% url 'phc:index' %}">
+                        <i class="mdi mdi-view-dashboard mr-2"></i>
+                        <span>Dashboard</span>
+                    </a>
+                    <a class="dropdown-item d-flex align-items-center justify-content-between" href="{% url 'users:logout' %}">
+                        <i class="fas fa-sign-out-alt"></i>
+                        <span>Log Out</span>
+                    </a>
+                </div>
+            </div>
+
+            {% endif %}
             
             
             <button type="button" class="btn btn-sm mr-2 font-size-16 d-lg-none header-item waves-effect waves-light" data-toggle="collapse" data-target="#topnav-menu-content">
@@ -78,13 +101,13 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">
+                        <a class="nav-link" href="{% url 'main:graphs' %}">
                             Graphs
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">
-                            Tables
+                        <a class="nav-link" href="{% url 'main:partners' %}">
+                            Partners
                         </a>
                     </li>
                     <li class="nav-item">
