--- a/main/templates/main/includes/footer.html
+++ b/main/templates/main/includes/footer.html
@@ -1,15 +1,11 @@
-
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="text-center text-lg-left">
-                                    2023 © PCNs - Kenya
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="text-right d-none d-lg-block">
-                                    Primary Care Networks - Kenya                                </div>
-                            </div>
-                        </div>
-                    </div>
-               
+<footer class="container-fluid">
+    <div class="row">
+        <div class="col-12 text-center">
+            <p>
+                Developed for the Ministry of Health by: 
+                <a href="https://firstdata.co.ke" target="_blank">FIRSTDATA</a> with support from 
+                <a href="https://amref.org" target="_blank">AMREF HEALTH AFRICA</a>
+            </p>
+        </div>
+    </div>
+</footer>
