--- a/users/templates/users/password_reset.html
+++ b/users/templates/users/password_reset.html
@@ -30,6 +30,12 @@
 
                                         </div>
                                     </form>
+                                    <div class="row mt-4">
+                                        <div class="col-12 text-center">
+                                            <p class="text-muted mb-2"><a href="{% url 'users:login' %}" class="text-muted font-weight-medium ml-1">Login</a></p>
+                                          
+                                        </div> <!-- end col -->
+                                    </div>
                                 </div>
                             </div>
                         </div>
