--- a/main/templates/main/includes/navbar.html
+++ b/main/templates/main/includes/navbar.html
@@ -15,6 +15,29 @@
         </div>
 
         <div class="d-flex align-items-center">
+
+            {% if user.is_authenticated %}
+            <div class="dropdown d-inline-block ml-2">
+                <button type="button" class="btn header-item waves-effect waves-light" id="page-header-user-dropdown"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-user"></i>
+                    <span class="d-none d-sm-inline-block ml-1">{{user.username}}</span>
+                    <i class="mdi mdi-chevron-down d-none d-sm-inline-block"></i>
+                </button>
+                <div class="dropdown-menu dropdown-menu-right">
+                    <a class="dropdown-item d-flex align-items-center justify-content-between" href="{% url 'phc:index' %}">
+                        <i class="mdi mdi-view-dashboard mr-2"></i>
+                        <span>Dashboard</span>
+                    </a>
+                    <a class="dropdown-item d-flex align-items-center justify-content-between" href="{% url 'users:logout' %}">
+                        <i class="fas fa-sign-out-alt"></i>
+                        <span>Log Out</span>
+                    </a>
+                </div>
+            </div>
+
+            {% endif %}
+            
             
             <button type="button" class="btn btn-sm mr-2 font-size-16 d-lg-none header-item waves-effect waves-light" data-toggle="collapse" data-target="#topnav-menu-content">
                 <i class="fa fa-fw fa-bars"></i>
